--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,3 +13,4 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 @import "home";
 @import "the_mercado";
 @import "el-blog";
+@import "blog-single";
