--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -476,6 +476,7 @@ svg {
 @media screen and (min-width: 768px) {
   #site-navigation > ul > li.has-children {
     position: relative;
+    z-index: 1;
   }
   #site-navigation > ul > li.has-children ul {
     display: none;
@@ -1772,4 +1773,435 @@ address.site-info a:hover {
 
 .el-blog-landing {
   padding-top: 40px;
+}
+
+.single-blog {
+  display: flex;
+  margin-bottom: 50px;
+  height: calc(100vh - 106px);
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+@media (max-width: 985px) {
+  .single-blog {
+    flex-direction: column;
+    overflow: initial;
+    height: auto;
+    margin-bottom: 30px;
+  }
+}
+
+.single-blog .single-blog-img {
+  position: sticky;
+  position: -webkit-sticky;
+  z-index: 0;
+  top: 0;
+  width: 57%;
+}
+
+@media (max-width: 1200px) {
+  .single-blog .single-blog-img {
+    width: 50%;
+  }
+}
+
+@media (max-width: 985px) {
+  .single-blog .single-blog-img {
+    width: 100%;
+    position: relative;
+    height: 45vw;
+  }
+}
+
+.single-blog .single-blog-img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.single-blog .single-blog-info {
+  width: 43%;
+}
+
+.single-blog .single-blog-info h1 {
+  font-size: 10rem;
+  line-height: 0.8em;
+}
+
+.single-blog .single-blog-info h4 {
+  font-size: 4rem;
+  line-height: 0.9em;
+}
+
+.single-blog .single-blog-info h6 {
+  font-size: 22px;
+}
+
+@media (max-width: 1200px) {
+  .single-blog .single-blog-info {
+    width: 50%;
+  }
+}
+
+@media (max-width: 985px) {
+  .single-blog .single-blog-info {
+    width: 100%;
+  }
+}
+
+.single-blog .single-blog-info .single-blog-info-header {
+  background-color: #EA0029;
+  height: 100%;
+  width: 100%;
+  padding: 40px 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media (max-width: 985px) {
+  .single-blog .single-blog-info .single-blog-info-header {
+    height: auto;
+  }
+}
+
+.single-blog .single-blog-info .single-blog-info-header span {
+  font-size: 18px;
+  color: white;
+  font-family: "Domaine", Georgia, Times, Times New Roman, serif;
+  font-weight: 400;
+  margin-bottom: 20px;
+  display: block;
+}
+
+.single-blog .single-blog-info .single-blog-info-header h1 {
+  text-transform: uppercase;
+  color: #FFF065;
+  font-family: "Knockout-HTF47-Bantamweight", Arial Narrow, Arial, sans-serif;
+  font-weight: initial;
+  margin-bottom: 30px;
+}
+
+.single-blog .single-blog-info .single-blog-info-header h4 {
+  text-transform: uppercase;
+  font-family: "Knockout-HTF47-Bantamweight", Arial Narrow, Arial, sans-serif;
+  font-weight: initial;
+  color: white;
+  margin-bottom: 30px;
+}
+
+.single-blog .single-blog-info .single-blog-info-header h6 {
+  font-family: "Domaine", Georgia, Times, Times New Roman, serif;
+  color: white;
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.single-blog .single-blog-info .single-blog-content {
+  max-width: 350px;
+  margin: 40px auto;
+}
+
+@media (max-width: 985px) {
+  .single-blog .single-blog-info .single-blog-content {
+    max-width: 1024px;
+    margin: 40px 32px;
+  }
+}
+
+.hay-mas .hay-mas-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #EA0029;
+  margin-bottom: 15px;
+  padding: 30px 10px;
+}
+
+@media (max-width: 820px) {
+  .hay-mas .hay-mas-header {
+    flex-direction: column;
+    padding: 50px 20px;
+  }
+}
+
+.hay-mas .hay-mas-header h6 {
+  color: #FFF065;
+  margin-bottom: 0px;
+  text-transform: uppercase;
+  font-size: 50px;
+  font-weight: initial;
+  font-family: "Knockout-HTF47-Bantamweight", Arial Narrow, Arial, sans-serif;
+  margin: 0 15px;
+}
+
+@media (max-width: 820px) {
+  .hay-mas .hay-mas-header h6 {
+    margin: 0 15px 30px 15px;
+    text-align: center;
+  }
+}
+
+.hay-mas .hay-mas-header span {
+  margin: 0 15px;
+  display: block;
+  font-size: 25px;
+  font-family: "Domaine", Georgia, Times, Times New Roman, serif;
+  color: white;
+  text-align: center;
+  line-height: 1.2em;
+}
+
+.hay-mas .hay-mas-links {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 815px) {
+  .hay-mas .hay-mas-links {
+    flex-wrap: wrap;
+  }
+}
+
+.hay-mas .hay-mas-links a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  margin-bottom: 50px;
+}
+
+.hay-mas .hay-mas-links a:hover span {
+  opacity: 1 !important;
+}
+
+.hay-mas .hay-mas-links .hay-mas-link {
+  width: 24%;
+}
+
+@media (max-width: 815px) {
+  .hay-mas .hay-mas-links .hay-mas-link {
+    width: 47%;
+  }
+}
+
+@media (max-width: 555px) {
+  .hay-mas .hay-mas-links .hay-mas-link {
+    width: 100%;
+  }
+}
+
+.hay-mas .hay-mas-links .hay-mas-link .hay-mas-link-icon {
+  width: 100%;
+  margin-bottom: 15px;
+  position: relative;
+}
+
+.hay-mas .hay-mas-links .hay-mas-link .hay-mas-link-icon span {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 240, 101, 0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #EA0029;
+  font-family: "Domaine", Georgia, Times, Times New Roman, serif;
+  font-weight: 800;
+  font-size: 34px;
+  transition: ease 300ms all;
+  opacity: 0;
+}
+
+.hay-mas .hay-mas-links .hay-mas-link .hay-mas-link-icon img {
+  width: 100%;
+  height: auto;
+}
+
+.hay-mas .hay-mas-links .hay-mas-link .hay-mas-link-icon.with-padding {
+  height: 0;
+  padding-bottom: 100%;
+  position: relative;
+}
+
+.hay-mas .hay-mas-links .hay-mas-link .hay-mas-link-icon.with-padding img {
+  border: 2px solid #EA0029;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 10px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.hay-mas .hay-mas-links h4 {
+  font-family: "Domaine", Georgia, Times, Times New Roman, serif;
+  font-weight: 800;
+  text-align: center;
+  font-size: 25px;
+  line-height: 1.1em;
+  color: #EA0029;
+  letter-spacing: initial;
+}
+
+.hay-mas .hay-mas-links h6 {
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  font-family: "Domaine", Georgia, Times, Times New Roman, serif;
+  font-weight: 800;
+  color: #474746;
+}
+
+.single-blog-social {
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.single-blog-social .single-blog-social-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 2px solid white;
+  padding: 5px;
+}
+
+.single-blog-social .single-blog-social-container a {
+  margin: 10px 25px;
+}
+
+.single-blog-social .single-blog-social-container img {
+  height: 20px;
+  width: auto;
+}
+
+.single-blog-social .single-blog-social-container .social-twitter img {
+  height: 17px;
+}
+
+.single-blog-social .single-blog-social-container .social-email img {
+  height: 17px;
+}
+
+.single-blog-social .single-blog-scroll {
+  margin-left: 50px;
+  cursor: pointer;
+}
+
+.single-blog-social .single-blog-scroll span {
+  text-transform: uppercase;
+  font-family: "Knockout", Arial Narrow, Arial, sans-serif !important;
+  font-weight: 100;
+  display: block;
+  position: relative;
+  text-align: center;
+}
+
+.single-blog-social .single-blog-scroll span:before {
+  content: '';
+  height: 15px;
+  width: 15px;
+  top: calc(100%);
+  left: 0;
+  right: 0;
+  margin: auto;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  position: absolute;
+  transform: rotate(45deg);
+  animation: smolpop 2s infinite;
+}
+
+@keyframes smolpop {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0px) rotate(45deg);
+    -webkit-transform: translateY(0px) rotate(45deg);
+    -moz-transform: translateY(0px) rotate(45deg);
+    -ms-transform: translateY(0px) rotate(45deg);
+    -o-transform: translateY(0px) rotate(45deg);
+  }
+  40% {
+    transform: translateY(-2px) rotate(45deg);
+    -webkit-transform: translateY(-2px) rotate(45deg);
+    -moz-transform: translateY(-2px) rotate(45deg);
+    -ms-transform: translateY(-2px) rotate(45deg);
+    -o-transform: translateY(-2px) rotate(45deg);
+  }
+  60% {
+    transform: translateY(-4px) rotate(45deg);
+    -webkit-transform: translateY(-4px) rotate(45deg);
+    -moz-transform: translateY(-4px) rotate(45deg);
+    -ms-transform: translateY(-4px) rotate(45deg);
+    -o-transform: translateY(-4px) rotate(45deg);
+  }
+}
+
+.article-info-slide {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #EA0029;
+  padding: 19px;
+  transform: translateX(-100%);
+  transition: ease 400ms all;
+}
+
+@media (max-width: 985px) {
+  .article-info-slide {
+    display: none;
+  }
+}
+
+.article-info-slide.active {
+  transform: none;
+}
+
+.article-info-slide h6 {
+  color: #EA0029;
+  text-transform: uppercase;
+  font-size: 19px;
+  margin-right: 20px;
+  text-align: center;
+}
+
+.article-info-slide span {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 19px;
+  margin-right: 20px;
+  color: #474746;
+}
+
+.article-info-slide .single-blog-social-container {
+  display: flex;
+  align-items: center;
+}
+
+.article-info-slide .single-blog-social-container img {
+  height: 20px;
+  width: auto;
+}
+
+.article-info-slide .single-blog-social-container a {
+  margin-right: 24px;
+}
+
+.article-info-slide .single-blog-social-container a:last-child {
+  margin-right: 0px;
+}
+
+.article-info-slide .single-blog-social-container a.social-twitter img {
+  height: 16px;
+}
+
+.article-info-slide .single-blog-social-container a.social-email img {
+  height: 16px;
 }
