--- a/templates/shop.html
+++ b/templates/shop.html
@@ -22,7 +22,7 @@
 
     <div class="shop-little-spain-shops kiosk-grid">
 
-{% for shop in current.fields['online-products'].products %}
+{% for shop in current.fields['shop-products'].products %}
       <article class="kiosk-box">
           <a href="">
             <div class="kiosk-box-img">
