--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -9,9 +9,9 @@
       <h6>{{current.name}}</h6>
       <span>Share Article: </span>
       <div class="single-blog-social-container">
-        <a href="" class='social-fb'><img src="{{ static('img/Facebook_gray.png') }}" alt=""></a>
-        <a href="" class='social-twitter'><img src="{{ static('img/Twitter_gray.png') }}" alt=""></a>
-        <a href="" class='social-email'><img src="{{ static('img/Email_gray.png') }}" alt=""></a>
+        <a href="" class='social-fb'><img src="{{ static('img/Facebook_gray.png') }}" alt="Facebook Icon"></a>
+        <a href="" class='social-twitter'><img src="{{ static('img/Twitter_gray.png') }}" alt="Twitter Icon"></a>
+        <a href="" class='social-email'><img src="{{ static('img/Email_gray.png') }}" alt="Email Icon"></a>
       </div>
     </div>
   </div>
@@ -25,9 +25,9 @@
       </div>
       <div class="single-blog-social">
         <div class="single-blog-social-container">
-          <a href="" class='social-fb'><img src="{{ static('img/Facebook.png') }}" alt=""></a>
-          <a href="" class='social-twitter'><img src="{{ static('img/Twitter.png') }}" alt=""></a>
-          <a href="" class='social-email'><img src="{{ static('img/Email.png') }}" alt=""></a>
+          <a href="" class='social-fb'><img src="{{ static('img/Facebook.png') }}" alt="Facebook Icon"></a>
+          <a href="" class='social-twitter'><img src="{{ static('img/Twitter.png') }}" alt="Twitter Icon"></a>
+          <a href="" class='social-email'><img src="{{ static('img/Email.png') }}" alt="Email Icon"></a>
         </div>
         <div class="single-blog-scroll">
           <span>Scroll</span>
