--- a/assets/css/_shop.scss
+++ b/assets/css/_shop.scss
@@ -1,3 +1,100 @@
 .shop-landing{
   padding-top: 40px;
 }
+
+.shop-now-button{
+  padding: 15px 50px;
+  border: 2px solid $toro_red;
+  text-transform: uppercase;
+  color: $toro_red;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 20px;
+  transition: ease 300ms all;
+  cursor: pointer;
+  &:hover{
+    background-color: $toro_red;
+    color: white;
+  }
+}
+
+.gift-card-container{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 60px;
+  @media (max-width: 767px){
+    flex-direction: column;
+  }
+  .gift-card-img{
+    width: 55%;
+    @media (max-width: 767px){
+      width: 100%;
+      margin-bottom: 30px;
+    }
+    padding: 10px;
+    border: 2px solid $toro_red;
+    .gift-card-img-text{
+      background-color: $toro_red;
+      color: $oro_yellow;
+      height: 0;
+      padding-bottom: 100%;
+      position: relative;
+      span{
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 100px;
+        text-transform: uppercase;
+        text-align: center;
+        font-family: $knockout-bantam;
+        max-width: 200px;
+        margin: auto;
+        @media (max-width: 1200px){
+          font-size: 80px;
+        }
+        @media (max-width: 900px){
+          font-size: 60px;
+        }
+        @media (max-width: 767px){
+          // font-size: 30px;
+        }
+      }
+    }
+  }
+  .gift-card-info{
+    width: 45%;
+    padding: 20px 40px;
+    @media (max-width: 767px){
+      width: 100%;
+      padding: 0px;
+      text-align: center;
+      padding: 20px;
+    }
+
+    h4{
+      color: $toro_red;
+      font-weight: initial;
+      font-family: $knockout-bantam;
+      // font-weight: 900;
+      margin-bottom: 20px;
+    }
+    p{
+      margin-bottom: 15px;
+    }
+  }
+  .more-info{
+    color: $toro_red;
+    border: 2px solid $toro_red;
+    text-decoration: none;
+    font-family: $knockout-lite;
+    font-size: 20px;
+    margin: 0 10px;
+  }
+}
