--- a/templates/shop.html
+++ b/templates/shop.html
@@ -26,7 +26,7 @@
       <article class="kiosk-box">
           <a href="">
             <div class="kiosk-box-img">
-              <img src="{{shop.image.url}}" alt="shop.image.alt">
+              <img src="{{shop.image.url}}" alt="{{shop.image.alt}}">
               <h4>{{shop.hover_text}}</h4>
             </div>
             <h6>{{shop.name}}</h6>
@@ -62,6 +62,29 @@
         </article>
 {% endfor %}
 
+    </div>
+  </div>
+</section>
+
+
+<section class="shop-little-gift-cards">
+  <div class="content-margins">
+    <div class="section-title-container">
+      <img src="{{ static('img/yellow_triangle.png')}}" alt="">
+      <h2>Gift Cards</h2>
+    </div>
+
+    <div class="gift-card-container">
+      <div class="gift-card-img">
+        <div class="gift-card-img-text">
+          <span>Give the Gift of Little Spain</span>
+        </div>
+      </div>
+      <div class="gift-card-info">
+        {{current.fields['gift-card'].content_box}}
+
+        <a href="" class="more-info">Shop Now</a>
+      </div>
     </div>
   </div>
 </section>
