Basic Template and Our_story

--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -1,6 +1,6 @@
 {% include "header.html" %}
 <article class='standard-page'>
-<!-- START base.html  -->
+<!-- START our_story.html  -->
 <section class="standard-page-content">
 
 {% for field in current.fields.flexible.content %}
