--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -29,7 +29,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H1 components */
     @mixin h1-desktop-style {
       font-size: 12rem;
-      font-weight: bold;
+//       font-weight: bold;
       line-height: 9.5rem;
       letter-spacing: 0.15rem;
       text-transform: none;
@@ -37,7 +37,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h1-mobile-style {
       font-size: 9rem;
-      font-weight: bold;
+//       font-weight: bold;
       line-height: 7.5rem;
       letter-spacing: 0.135rem;
       text-transform: none;
@@ -58,7 +58,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H2 Components */
     @mixin h2-desktop-style {
       font-size: 10rem;
-      font-weight: bold;
+//       font-weight: bold;
       line-height: 9rem;
       letter-spacing: 0.15rem;
       text-transform: none;
@@ -66,7 +66,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h2-mobile-style {
       font-size: 8.6rem;
-      font-weight: bold;
+//       font-weight: bold;
       line-height: 7.2rem;
       letter-spacing: 0.129rem;
       text-transform: none;
@@ -87,7 +87,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H4 Components */
     @mixin h3-desktop-style {
       font-size: 3.4rem;
-      font-weight: bold;
+//       font-weight: bold;
       line-height: 5rem;
       letter-spacing: normal;
       text-transform: none;
@@ -95,7 +95,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h3-mobile-style {
       font-size: 2.9rem;
-      font-weight: bold;
+//       font-weight: bold;
       line-height: 4.5rem;
       letter-spacing: normal;
       text-transform: none;
@@ -116,7 +116,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H4 Components */
     @mixin h4-desktop-style {
       font-size: 5rem;
-      font-weight: bold;
+//       font-weight: bold;
       line-height: 4.3rem;
       letter-spacing: 0.083rem;
       text-transform: none;
@@ -124,7 +124,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h4-mobile-style {
       font-size: 3.9rem;
-      font-weight: bold;
+//       font-weight: bold;
       line-height: 3.2rem;
       letter-spacing: 0.065rem;
       text-transform: none;
@@ -145,7 +145,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H5 Components */
     @mixin h5-desktop-style {
       font-size: 2.5rem;
-      font-weight: bold;
+//       font-weight: bold;
       line-height: 2.8rem;
       letter-spacing: normal;
       text-transform: none;
@@ -153,7 +153,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h5-mobile-style {
       font-size: 1.7rem;
-      font-weight: bold;
+//       font-weight: bold;
       line-height: 2.4rem;
       letter-spacing: normal;
       text-transform: none;
@@ -174,7 +174,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* H6 Components */
     @mixin h6-desktop-style {
       font-size: 1.4rem;
-      font-weight: normal;
+//       font-weight: normal;
       line-height: 2rem;
       letter-spacing: normal;
       text-transform: none;
@@ -182,7 +182,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin h6-mobile-style {
       font-size: 1.3rem;
-      font-weight: normal;
+//       font-weight: normal;
       line-height: 2rem;
       letter-spacing: normal;
       text-transform: none;
@@ -203,7 +203,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* Paragraph Components */
     @mixin p-desktop-style {
       font-size: 1.9rem;
-      font-weight: normal;
+//       font-weight: normal;
       line-height: 2.4rem;
       letter-spacing: normal;
       text-transform: none;
@@ -211,7 +211,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin p-mobile-style {
       font-size: 1.5rem;
-      font-weight: normal;
+//       font-weight: normal;
       line-height: 2.1rem;
       letter-spacing: normal;
       text-transform: none;
@@ -232,7 +232,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* Nav Font Components */
     @mixin nav-font-desktop-style {
       font-size: 2.2rem;
-      font-weight: lighter;
+//       font-weight: lighter;
       line-height: 2.9rem;
       letter-spacing: normal;
       text-transform: uppercase;
@@ -240,7 +240,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin nav-font-mobile-style {
       font-size: 2.2rem;
-      font-weight: lighter;
+//       font-weight: lighter;
       line-height: 2.9rem;
       letter-spacing: normal;
       text-transform: uppercase;
@@ -261,7 +261,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* Caption Font Components */
     @mixin caption-font-desktop-style {
       font-size: 1.1rem;
-      font-weight: normal;
+//       font-weight: normal;
       line-height: 1.6rem;
       letter-spacing: normal;
       text-transform: uppercase;
@@ -269,7 +269,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin caption-font-mobile-style {
       font-size: 1.1rem;
-      font-weight: normal;
+//       font-weight: normal;
       line-height: 1.6rem;
       letter-spacing: normal;
       text-transform: uppercase;
@@ -290,7 +290,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
     /* Button Font Components */
     @mixin button-font-desktop-style {
       font-size: 2rem;
-      font-weight: normal;
+//       font-weight: normal;
       line-height: 2.7rem;
       letter-spacing: 0.062rem;
       text-transform: uppercase;
@@ -298,7 +298,7 @@ $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
     @mixin button-font-mobile-style {
       font-size: 2rem;
-      font-weight: normal;
+//       font-weight: normal;
       line-height: 2.7rem;
       letter-spacing: 0.062rem;
       text-transform: uppercase;
