--- a/templates/header.html
+++ b/templates/header.html
@@ -26,8 +26,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
+<link rel="stylesheet" type="text/css" href="https://cloud.typography.com/8004872/7727152/css/fonts.css" />
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- <link rel="stylesheet" href="{{ static('css/normalize.css') }}">
