--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,25 @@
 {% include "header.html" %}
 
 index.html
-<!-- {{current}} -->
-{{pages.all}}
+
+
+
+
+
+<section class="ig-feed">
+  <div class="content-margins">
+    <div class="ig-boxes">
+      <div class="ig-box edge-box">
+        <h5>¿Que hacen en el Mercado?</h5>
+      </div>
+
+      <div class="ig-box edge-box edge-box-tail">
+        <h5><a href="https://www.instagram.com/littlespain/" target='_blank'>Little Spain on Instagram</a></h5>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
 {% include "footer.html" %}
