--- a/templates/the_mercado.html
+++ b/templates/the_mercado.html
@@ -70,8 +70,8 @@
         <h5>¿Que hacen en el Mercado?</h5>
       </div>
 
-      <div class="ig-box edge-box">
-        <h5><a href="">Little Spain on Instagram</a></h5>
+      <div class="ig-box edge-box edge-box-tail">
+        <h5><a href="https://www.instagram.com/littlespain/" target='_blank'>Little Spain on Instagram</a></h5>
       </div>
     </div>
   </div>
