--- a/templates/boxes/kiosks.html
+++ b/templates/boxes/kiosks.html
@@ -1,7 +1,24 @@
 {% include "header.html" %}
-
+<div class='single-kiosk'>
 <!-- START base.html  -->
+<section class="kiosk-landing">
+  <div class="content-margins">
+    <div class="page-landing-header">
+      <img src="{{static('img/el-blog-landing/Left.png')}}" alt="">
+      <h1>El Blog</h1>
+      <img src="{{static('img/el-blog-landing/Right.png')}}" alt="">
+    </div>
 
+  </div>
+</section>
+
+<section class="kiosk-content">
+  <div class="content-margins">
+
+
+  </div>
+</section>
+</div>
 kiosks.html
 {{current}}
 
