--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -50,3 +50,219 @@
     }
   }
 }
+
+.home-description{
+  margin-bottom: 50px;
+  .home-desc-inner{
+    background-color: $toro_red;
+    font-family: $domaine;
+    color: white;
+    text-align: center;
+    padding: 20px 60px;
+    max-width: 80%;
+    margin: auto;
+    @media (max-width: 1200px){
+      max-width: unset;
+    }
+    @media (max-width: 767px){
+      padding: 20px 40px;
+    }
+    h1{
+      font-family: $knockout-bantam;
+      margin-bottom: 20px;
+    }
+    p{
+      margin-bottom: 20px;
+    }
+    a{
+      display: inline-block;
+      margin: 20px 0;
+      font-family: $knockout;
+      text-decoration: none;
+    }
+  }
+}
+
+.home-restaurants-container{
+  margin-bottom: 50px;
+}
+
+.home-restaurant-box{
+  border: 2px solid $toro_red;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+
+  &:nth-child(even){
+    flex-direction: row-reverse;
+  }
+
+  .home-rest-img{
+    padding: 10px;
+    width: 75%;
+
+    // .home-rest-img-cont{
+    //   height: 0;
+    //   padding-bottom: 50%;
+    //   position: relative;
+    // }
+
+    img{
+      // position: absolute;
+      // left: 0;
+      // top: 0;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+  .home-rest-info{
+    width: 25%;
+    border-left: 2px solid $toro_red;
+    .home-rest-name{
+      background-color: $toro_red;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 35px 50px;
+      margin-bottom: 15px;
+      h4{
+        color: white;
+        text-transform: uppercase;
+        font-family: $knockout-bantam;
+      }
+    }
+    .home-rest-caption{
+      display: flex;
+      align-items: center;
+
+      text-align: center;
+      flex-direction: column;
+      padding: 10px;
+      p{
+        margin-bottom: 20px;
+      }
+      .more-info{
+        color: $toro_red;
+        text-decoration: none;
+        border: 2px solid $toro_red;
+        margin-bottom: 25px;
+        width: 150px;
+        padding:  15px 0;
+      }
+    }
+  }
+  &:nth-child(even){
+    .home-rest-info{
+      border-right: 2px solid $toro_red;
+      border-left: 0px;
+    }
+  }
+}
+
+
+.home-mercado-kiosks{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  .home-mercado-kiosk{
+    width: 18.5%;
+    margin-bottom: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    a{
+      text-decoration: none;
+      &:hover h6{
+        opacity: 1;
+      }
+    }
+    .home-mercado-kiosk-img{
+      margin-bottom: 15px;
+      position: relative;
+      h6{
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(255, 240, 101, 0.9);
+        color: $toro_red;
+        font-family: $domaine;
+        font-size: 25px;
+        text-align: center;
+        line-height: 1.2em;
+        font-weight: 900;
+        padding: 10px;
+        opacity: 0;
+        transition: 300ms ease all;
+      }
+    }
+    img{
+      height: auto;
+      width: 100%;
+    }
+    h5{
+      color: $toro_red;
+      font-family: $domaine;
+      text-align: center;
+      font-size: 20px;
+      font-weight: 900;
+      line-height: 1.2em;
+    }
+  }
+}
+
+.home-happenings{
+  margin-bottom: 50px;
+  .home-happenings-events{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    .home-happenings-event{
+      width: 24%;
+      padding: 10px;
+      border: 2px solid $toro_red;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      text-decoration: none;
+      color: black;
+      .home-happenings-upper{
+        margin-bottom: 20px;
+      }
+      h6{
+        font-family: $domaine;
+        font-weight: 900;
+        margin-bottom: 10px;
+      }
+      h3{
+        text-transform: uppercase;
+        color: $toro_red;
+        font-family: $knockout-lite;
+        font-size: 40px;
+        line-height: 1em;
+        margin-bottom: 7px;
+      }
+      .home-happenings-img{
+        width: 100%;
+        height: 0;
+        padding-bottom: 100%;
+        position: relative;
+      }
+      img{
+        position: absolute;
+        left: 0;
+        top:0;
+
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
