Press on Our Story Page, Kiosk Single and Additions to the Fonts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,7 +276,7 @@ svg {
   .page-landing-header h1 {
     text-transform: uppercase;
     color: #EA0029;
-    font-family: "Knockout 49 A", "Knockout 49 B";
+    font-family: "Knockout 67 A", "Knockout 67 B";
     font-weight: initial;
     font-size: 85px;
     white-space: nowrap; }
@@ -289,6 +289,12 @@ svg {
         white-space: normal;
         text-align: center;
         line-height: 1em; } }
+  .page-landing-header h2 {
+    color: black;
+    font-family: "Knockout 67 A", "Knockout 67 B";
+    font-size: 6em;
+    line-height: .8em;
+    text-transform: uppercase; }
   .page-landing-header img {
     width: 15%;
     height: auto; }
@@ -1088,7 +1094,7 @@ address.site-info {
     color: #EA0029;
     border: 2px solid #EA0029;
     text-decoration: none;
-    font-family: "Knockout 49 A", "Knockout 49 B";
+    font-family: "Knockout 67 A", "Knockout 67 B";
     font-size: 20px;
     margin: 0 10px; }
     .rest-landing-rest-info-buttons a.more-info:hover {
@@ -1290,7 +1296,7 @@ address.site-info {
     padding-top: 4px;
     text-transform: uppercase;
     color: #EA0029;
-    font-family: "Knockout 49 A", "Knockout 49 B";
+    font-family: "Knockout 67 A", "Knockout 67 B";
     font-weight: initial;
     line-height: 0.85em;
     font-size: 6em; }
@@ -1338,7 +1344,7 @@ address.site-info {
         .blog-articles-container .blog-post:nth-child(1) .info .blog-post__desc {
           font-weight: initial;
           text-transform: uppercase;
-          font-family: "Knockout 49 A", "Knockout 49 B";
+          font-family: "Knockout 67 A", "Knockout 67 B";
           line-height: 1em;
           font-size: 5.75em;
           padding-top: 16px; } }
@@ -1809,7 +1815,7 @@ address.site-info {
     color: #EA0029;
     border: 2px solid #EA0029;
     text-decoration: none;
-    font-family: "Knockout 49 A", "Knockout 49 B";
+    font-family: "Knockout 67 A", "Knockout 67 B";
     font-size: 20px;
     margin: 0 10px; }
 
@@ -1839,7 +1845,7 @@ address.site-info {
     color: #EA0029;
     margin-bottom: 20px; }
   .standard-page .standard-content h2 {
-    font-family: "Knockout 49 A", "Knockout 49 B";
+    font-family: "Knockout 67 A", "Knockout 67 B";
     text-transform: uppercase;
     color: #EA0029;
     font-size: 50px;
@@ -1864,7 +1870,7 @@ address.site-info {
     color: #EA0029;
     letter-spacing: 0px; }
   .standard-page .standard-content b, .standard-page .standard-content strong {
-    font-family: "Knockout 49 A", "Knockout 49 B"; }
+    font-family: "Knockout 67 A", "Knockout 67 B"; }
   .standard-page .standard-content em {
     font-style: italic; }
   .standard-page .standard-content hr {
@@ -1940,3 +1946,37 @@ address.site-info {
     height: auto;
     box-sizing: border-box;
     border: 2px #EA0029 solid; } }
+
+.single-kiosk {
+  padding-top: 23px; }
+  .single-kiosk .page-landing-header img {
+    width: 130px;
+    margin: 15px; }
+  .single-kiosk .page-landing-header .kiosk_title {
+    width: 130px;
+    height: 130px;
+    float: right;
+    border: 2px solid black;
+    margin: 15px;
+    display: flex;
+    text-align: center;
+    align-items: center; }
+  .single-kiosk .kiosk-details {
+    display: flex;
+    width: 100%;
+    border: 2px solid #EA0029;
+    margin-bottom: 70px; }
+    .single-kiosk .kiosk-details .kiosk-information {
+      width: 345px;
+      display: flex;
+      flex-direction: column;
+      border-right: 2px solid #EA0029; }
+      .single-kiosk .kiosk-details .kiosk-information .kiosk-description, .single-kiosk .kiosk-details .kiosk-information .kiosk-map, .single-kiosk .kiosk-details .kiosk-information .kiosk-share {
+        border-bottom: 2px solid #EA0029; }
+      .single-kiosk .kiosk-details .kiosk-information .kiosk-description {
+        padding: 40px; }
+        .single-kiosk .kiosk-details .kiosk-information .kiosk-description strong {
+          color: #EA0029;
+          font-size: 6rem;
+          font-family: "Knockout 67 A", "Knockout 67 B";
+          text-transform: uppercase; }
