--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -53,7 +53,10 @@ ul, ol {
 svg {
   fill: currentColor;
 }
+a{
+  text-decoration: none;
 
+}
 .screen-reader-text {
   border: 0;
   clip: rect(1px, 1px, 1px, 1px);
@@ -123,6 +126,15 @@ svg {
       text-align: center;
       line-height: 1em;
     }
+
+  }
+
+  h2{
+	  color:black;
+	   font-family: $knockout-lite;
+	       font-size: 6em;
+	       line-height: .8em;
+	       text-transform: uppercase;
 
   }
   img{
