--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,3 +16,5 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 @import "blog-single";
 @import "shop";
 @import "basic";
+@import "kiosks";
+@import "our_story";
